@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- When printing an unraisable error, don't print exceptions. before the name.
+  This duplicates the behavior whening normally printing exceptions.
+
 - Bug #1653736: Properly discard third argument to slot_nb_inplace_power.
 
 - PEP 352: Raising a string exception now triggers a TypeError.  Attempting to
